# UniRun

./: LICENSE  README.md  main.py  pyproject.toml  unirun.py
completions/: unirun.bash  unirun.zsh
core/: detector.py  doctor.py  history.py  install.py  search.py  search_command.py
runtimes/: appimage.py  native.py  waydroid.py  wine.py  xdg.py
tests/: test_all.py
unirun/: __main__.py  cli.py  config.py  ui.py
unirun/core/: detector.py  doctor.py  history.py  install.py  search.py  search_command.py
unirun/data/: apps.json  runtimes.json
unirun/runtimes/: waydroid.py  wine.py
